<resources>
    <string name="app_name">Harassment Alert app</string>
    <string name="google_maps_api_key">AIzaSyD7F-k0FXxv93lB3fzMBWG6bqhP4f8572Q</string>
    <string name="navigation_open_drawer">Open navigation drawer</string>
    <string name="navigation_close_drawer">Close navigation drawer</string>
    <string name="nav_header_title">Placeholder Name</string>
    <string name="nav_header_subtitle">placeholder@asu.edu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_contact">New Contact Page</string>
    <string name="title_activity_existing_contact">Existing Contact Page</string>

    <string name="menu_home">Home</string>
    <string name="menu_add_contacts">Add Contacts</string>
    <string name="menu_my_contacts">My Contacts</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_share">Share</string>
    <string name="menu_log_out">Log out</string>
    <string name="menu_log_in">Log in</string>
    <string name="maps">Maps</string>
    <string name="maps_safe">Safe Zone</string>
    <string name="maps_unsafe">Unsafe Zone</string>
    <string name="collection_user_locations">User Locations</string>
    <string name="voice_recognition">Voice Recognition</string>
    <string name="user_location_db_id">zwtsekOqIGwKEj17rWzA</string>

    <string name="client_id">786077791064-r1eokqbg8kqb3p8no1nnmn4n144jaj3o.apps.googleusercontent.com</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="title_activity_maps">Map</string>

</resources>
