<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home"
            android:visible="true"
            />
        <item
            android:id="@+id/nav_my_contacts"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/menu_my_contacts"
            android:visible="false"
            />
    </group>

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share"
                android:visible="false"
                />
            <item
                android:id="@+id/nav_log_in"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/menu_log_in"
                android:visible="true"
                />
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/menu_log_out"
                android:visible="false"
                />


        </group>

</menu>
